# MoneyManager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pull-request.yml
moneymanager/: __main__.py  account.py  csv_manager.py  display.py  transaction.py  transaction_model.py
src/moneymanager/: __main__.py  account_model.py  exception.py  transaction.py
src/moneymanager/app/: _ui_option.py  app.py  config.py
src/moneymanager/controller/: base_controller.py
src/moneymanager/controller/cli/: cli_add_transaction_controller.py  cli_home_controller.py  cli_manage_account_controller.py  main_cli_controller.py
src/moneymanager/database/: base_csv_repository.py  money_manager_database.py  moneymanager_database.py
src/moneymanager/database/entity/: account.py  transaction.py
src/moneymanager/database/model/: account.py  model.py  transaction.py
src/moneymanager/database/repository/: account_repository.py  repository.py  transaction_repository.py
src/moneymanager/entity/: transaction.py
src/moneymanager/repository/: repository.py  transaction_repository.py
src/moneymanager/view/cli/: base_cli_view.py  cli_add_transaction_view.py  cli_home_view.py  cli_manage_account_view.py  cli_transaction_view.py
tests/: test_csv_manager.py  test_display.py
tests/unit/: base_repository_test.py  test_account_repository.py  test_base_csv_repository.py  test_transaction_repository.py
userdata/: accounts.csv.template  transaction_history.csv  transaction_history.csv.template
